feat: user/twitter related APIs
